--- a/Final-Comp-Sci-Project/csf12/csf12app/templates/index.html
+++ b/Final-Comp-Sci-Project/csf12/csf12app/templates/index.html
@@ -6,6 +6,23 @@
     <title>Welcome</title>
 </head>
 <body>
-    
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+    <strong>Message:</strong> {{ message }}
+    <button type="button" class="close" data-dismiss = "alert" aria-label="close">
+    <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    {% endfor %}
+    <h3>Welcome to our Alpha Test</h3>
+
+    {% if user.is_authenticated %}
+    <h3>Hello {{ fname }}</h3>
+    <h4>You are successfully logged in</h4>
+    <button type="submit"><a href="/signout"> SignOut</a></button>
+    {% else %}
+    <button type='submit'><a href="/signup"> SignUp</a></button>
+    <button type="submit"><a href="/signin"> SignIn</a></button>
+    {% endif %}
 </body>
 </html>
