--- a/Final-Comp-Sci-Project/csf12/csf12app/templates/valid.html
+++ b/Final-Comp-Sci-Project/csf12/csf12app/templates/valid.html
@@ -1,5 +1,4 @@
-<!-- valid.html -->
-
 <h3>Hello {{ fname }}</h3>
 <button type="submit"><a href="/signout">Sign Out</a></button>
 
+<button type='submin'><a href='/predict'>Image Prediction</a></button>
