--- a/Final-Comp-Sci-Project/csf12/csf12app/templates/index.html
+++ b/Final-Comp-Sci-Project/csf12/csf12app/templates/index.html
@@ -25,7 +25,7 @@
     <h4>Log Out</h4>
     <button type='submit'><a href='/signout'>Sign Out</a></button>
     {% else %}
-    <h3>Welcome to #</h3>
+    <h3>Welcome to ###</h3>
     <button type='submit'><a href="/signup"> Sign Up</a></button>
     <button type="submit"><a href="/signin"> Sign In</a></button>
     {% endif %}
