--- a/Final-Comp-Sci-Project/csf12/csf12app/templates/predict.html
+++ b/Final-Comp-Sci-Project/csf12/csf12app/templates/predict.html
@@ -3,6 +3,7 @@
     <input type="file" name="image" id="fileInput" style="display: none;" accept="image/*">
     <button type="button" onclick="openFileExplorer()">Choose an Image</button>
     <input type="submit" value="Predict">
+    <button type='submit'><a href='/valid'>Go Back </a></button> 
 </form>
 
 <!-- Container for displaying the chosen image -->
