AICoach final, Django update

--- a/Final-Comp-Sci-Project/calorieproj/calorieapp/templates/calorieCounter.html
+++ b/Final-Comp-Sci-Project/calorieproj/calorieapp/templates/calorieCounter.html
@@ -61,7 +61,7 @@
 
         .whoop {
             padding: 17.9px;
-            background-color: #ff6347;
+            background-color: #EC7063;
             border: none;
             color: #fff;
             border-radius: 0 5px 5px 0;
@@ -70,7 +70,7 @@
         }
 
         .whoop:hover {
-            background-color: #e5533d;
+            background-color: #E74C3C;
         }
 
         /* Alerts */
