--- a/Final-Comp-Sci-Project/calorieproj/calorieapp/templates/calorieCounter.html
+++ b/Final-Comp-Sci-Project/calorieproj/calorieapp/templates/calorieCounter.html
@@ -19,9 +19,9 @@
 
         /* Set up the body */
         body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
+            font-family: 'Poppins', sans-serif;
+            background-color: #1a1a1a;
+            color: #ffffff;
             line-height: 1.6;
             height: 100vh;
             display: flex;
@@ -35,12 +35,31 @@
             margin: auto;
             padding: 20px;
             text-align: center;
+            background-color: #1a1a1a;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
         }
 
-        /* Logo styling */
-        .logo {
-            max-width: 400px;
-            margin-bottom: 20px;
+        /* Spline viewer styling */
+        .spline-viewer {
+            width: 150px; /* Set the width of the spline viewer */
+            height: 150px; /* Set the height of the spline viewer */
+            margin-bottom: 20px; /* Add space below the spline viewer */
+        }
+
+        .overlay {
+            position: absolute;
+            z-index: 2;
+            bottom: 20px;
+            right: 20px;
+            width: 137px;
+            height: 36px;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: 6px;
+            border-radius: 12px;
+            background-color: #1a1a1a;
         }
 
         /* Form styling */
@@ -57,6 +76,8 @@
             border-radius: 5px 0 0 5px;
             flex: 1;
             font-size: 16px;
+            background-color: #333;
+            color: #fff;
         }
 
         .whoop {
@@ -78,21 +99,20 @@
             padding: 20px;
             border-radius: 5px;
             margin-top: 20px;
+            color: #fff;
         }
 
         .alert-warning {
             background-color: #ffcc00;
-            color: #fff;
         }
 
         .alert-danger {
             background-color: #f44336;
-            color: #fff;
         }
 
         /* Nutritional values */
         .caloriescont {
-            background-color: #fff;
+            background-color: #333;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -105,7 +125,7 @@
 
         .caloriescont li {
             padding: 10px;
-            border-bottom: 1px solid #eee;
+            border-bottom: 1px solid #555;
         }
 
         .caloriescont li:last-child {
@@ -121,14 +141,16 @@
             height: 0.8em;
             vertical-align: middle;
         }
+
     </style>
 </head>
 
 <body>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.4.6/build/spline-viewer.js"></script>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8 text-center">
-                <img src="{% static 'images/logo1.png' %}" class="img-responsive logo mb-5 mt-5" />
+                <spline-viewer url="https://prod.spline.design/wMXJIV-8UfTcHNzV/scene.splinecode"></spline-viewer>
                 <form method='POST'>
                     {% csrf_token %}
                     <div class="input-group input-group-lg mb-5">
@@ -141,7 +163,7 @@
                     {% if api == 'Oops... There is an error ^_^' or api == 'No results found.' %}
                         <div class="alert alert-warning"> {{ api }} </div>
                     {% else %}
-                        <h1>{{ api.name }} has a total of <strong>{{ api.calories }} Cal<img src="{% static 'images/cookie.png' %}" class="img-responsive" style="height: 0.8em; vertical-align: middle;" />ries</strong>
+                        <h1>{{ api.name }} has a total of <strong>{{ api.calories }} Cal<img src="{% static 'images/cookie.png' %}" class="img-responsive small-img" />ries</strong>
                         </h1>
 
                         {% if api.sodium_mg > 1000 %}
@@ -178,7 +200,6 @@
             </div>
         </div>
     </div>
-
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // JavaScript code to enhance the functionality
