--- a/Final-Comp-Sci-Project/calorieproj/calorieapp/templates/homepage.html
+++ b/Final-Comp-Sci-Project/calorieproj/calorieapp/templates/homepage.html
@@ -83,7 +83,7 @@
   </style>
   <script>
     function redirectToSignup() {
-      window.location.href = "signup/";
+      window.location.href = "register/";
     }
   </script>
 </head>
