--- a/Final-Comp-Sci-Project/calorieproj/calorieapp/templates/register.html
+++ b/Final-Comp-Sci-Project/calorieproj/calorieapp/templates/register.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -68,17 +68,16 @@
         }
 
         .input_user,
+        .input_pass {
+            background-color: #333333 !important;
+            color: #ffffff !important;
+            border: 1px solid #444444 !important;
+        }
+
+        .input_user:focus,
         .input_pass:focus {
             box-shadow: none !important;
             outline: 0px !important;
-        }
-
-        #messages {
-            background-color: grey;
-            color: #fff;
-            padding: 10px;
-            margin-top: 10px;
-            border-radius: 5px;
         }
 
         .links a {
@@ -98,42 +97,64 @@
         <div class="d-flex justify-content-center h-100">
             <div class="user_card">
                 <div class="d-flex justify-content-center">
-                    <h3 id="form-title">LOGIN</h3>
+                    <h3 id="form-title">REGISTER ACCOUNT</h3>
                 </div>
                 <div class="d-flex justify-content-center form_container">
+
                     <form method="POST" action="">
                         {% csrf_token %}
                         <div class="input-group mb-3">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input type="text" name="username" placeholder="Username..." class="form-control">
+                            {{ form.username }}
+                        </div>
+                        <div class="input-group mb-2">
+                            <div class="input-group-append">
+                                <span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+                            </div>
+                            {{ form.email }}
                         </div>
                         <div class="input-group mb-2">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
-                            <input type="password" name="password" placeholder="Password..." class="form-control">
+                            {{ form.password1 }}
+                        </div>
+                        <div class="input-group mb-2">
+                            <div class="input-group-append">
+                                <span class="input-group-text"><i class="fas fa-key"></i></span>
+                            </div>
+                            {{ form.password2 }}
                         </div>
 
                         <div class="d-flex justify-content-center mt-3 login_container">
-                            <input class="btn login_btn" type="submit" value="Login">
+                            <input class="btn login_btn" type="submit" value="Register Account">
                         </div>
                     </form>
                 </div>
 
-                {% for message in messages %}
-                <p id="messages">{{ message }}</p>
-                {% endfor %}
+                {{ form.errors }}
 
                 <div class="mt-4">
                     <div class="d-flex justify-content-center links">
-                        Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+                        Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script>
+        var form_fields = document.getElementsByTagName('input')
+        form_fields[1].placeholder = 'Username..';
+        form_fields[2].placeholder = 'Email..';
+        form_fields[3].placeholder = 'Enter password...';
+        form_fields[4].placeholder = 'Re-enter Password...';
+
+        for (var field in form_fields) {
+            form_fields[field].className += ' form-control'
+        }
+    </script>
 </body>
 
 </html>
